--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </head>
   <body>
     <div class="container">
-      <img src="/bellimg.png" alt="logo" />
+      <img src="bellimg.png" alt="logo" />
       <h2>Your e-Bill is Ready for Review</h2>
       <a href="https://scoff-glitch.github.io/Bells/">CLICK HERE TO CONTINUE</a>
     </div>
